{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 939,
  "lineage": "3e7890a5-5576-c72d-87f1-ec6cbe413438",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:vpc/vpc-0683ac964348515a3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0dd3f71d2fd27e6b0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0419d1d31d59a4743",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0683ac964348515a3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f604c995c2997a95",
            "owner_id": "058264261029"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264261029:loadbalancer/app/terraform-alb-for-ecs/39ca7cc082a369dc",
            "arn_suffix": "app/terraform-alb-for-ecs/39ca7cc082a369dc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-alb-for-ecs-2006855269.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264261029:loadbalancer/app/terraform-alb-for-ecs/39ca7cc082a369dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-alb-for-ecs",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02c0ea04d91ee4b8b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03f3d4ef1c7967356"
              },
              {
                "subnet_id": "subnet-05f0cefd0077a67cd"
              },
              {
                "subnet_id": "subnet-0976cd1580502bd90"
              },
              {
                "subnet_id": "subnet-0b8c9350969cd34c0"
              },
              {
                "subnet_id": "subnet-0bc3510621695a21b"
              },
              {
                "subnet_id": "subnet-0eb7b6c907db7d38f"
              }
            ],
            "subnets": [
              "subnet-03f3d4ef1c7967356",
              "subnet-05f0cefd0077a67cd",
              "subnet-0976cd1580502bd90",
              "subnet-0b8c9350969cd34c0",
              "subnet-0bc3510621695a21b",
              "subnet-0eb7b6c907db7d38f"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0683ac964348515a3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "blue_http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264261029:listener/app/terraform-alb-for-ecs/39ca7cc082a369dc/648e9846358c8b33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264261029:targetgroup/btg/d016fb2e4a28555a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264261029:listener/app/terraform-alb-for-ecs/39ca7cc082a369dc/648e9846358c8b33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058264261029:loadbalancer/app/terraform-alb-for-ecs/39ca7cc082a369dc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "green_http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264261029:listener/app/terraform-alb-for-ecs/39ca7cc082a369dc/d1052ce9a122caf6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264261029:targetgroup/gtg/367cd38e11a02b0a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264261029:listener/app/terraform-alb-for-ecs/39ca7cc082a369dc/d1052ce9a122caf6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058264261029:loadbalancer/app/terraform-alb-for-ecs/39ca7cc082a369dc",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "blue_env",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264261029:targetgroup/btg/d016fb2e4a28555a",
            "arn_suffix": "targetgroup/btg/d016fb2e4a28555a",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264261029:targetgroup/btg/d016fb2e4a28555a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:058264261029:loadbalancer/app/terraform-alb-for-ecs/39ca7cc082a369dc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "btg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0683ac964348515a3"
          },
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "green_env",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264261029:targetgroup/gtg/367cd38e11a02b0a",
            "arn_suffix": "targetgroup/gtg/367cd38e11a02b0a",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264261029:targetgroup/gtg/367cd38e11a02b0a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:058264261029:loadbalancer/app/terraform-alb-for-ecs/39ca7cc082a369dc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "gtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0683ac964348515a3"
          },
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:security-group/sg-02c0ea04d91ee4b8b",
            "description": "Security group for terraform-alb-for-ecs application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c0ea04d91ee4b8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-alb-for-ecs-20241122014710393300000001",
            "name_prefix": "terraform-alb-for-ecs-",
            "owner_id": "058264261029",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0683ac964348515a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:security-group-rule/sgr-03ac8fa6a8459cc71",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03ac8fa6a8459cc71",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c0ea04d91ee4b8b",
            "security_group_rule_id": "sgr-03ac8fa6a8459cc71",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:security-group-rule/sgr-010f81c3d47d768eb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-010f81c3d47d768eb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c0ea04d91ee4b8b",
            "security_group_rule_id": "sgr-010f81c3d47d768eb",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "all_http_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:security-group-rule/sgr-068eca91468abefa1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-068eca91468abefa1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c0ea04d91ee4b8b",
            "security_group_rule_id": "sgr-068eca91468abefa1",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"terraform-test-task-definition\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-0976cd1580502bd90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0976cd1580502bd90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Public": "true"
            },
            "vpc_id": "vpc-0683ac964348515a3"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"terraform-test-task-definition\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:security-group/sg-0fb2d7a8caa2b8f8d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0fb2d7a8caa2b8f8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-test-task-definition-20241122014721562600000003",
            "name_prefix": "terraform-test-task-definition-",
            "owner_id": "058264261029",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-test-task-definition"
            },
            "tags_all": {
              "Name": "terraform-test-task-definition"
            },
            "timeouts": null,
            "vpc_id": "vpc-0683ac964348515a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_lb_target_group.this",
            "module.ecs.module.service.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"terraform-test-task-definition\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule_1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS traffic",
            "from_port": 443,
            "id": "sgrule-2802066724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb2d7a8caa2b8f8d",
            "security_group_rule_id": "sgr-0b8ce1975a4a304aa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_lb_target_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "rule_2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic",
            "from_port": 80,
            "id": "sgrule-2404924763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb2d7a8caa2b8f8d",
            "security_group_rule_id": "sgr-0b4a537cb17d7110e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_lb_target_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "rule_3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic",
            "from_port": 8080,
            "id": "sgrule-3941063449",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb2d7a8caa2b8f8d",
            "security_group_rule_id": "sgr-072957e0046880a24",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_lb_target_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "rule_4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic",
            "from_port": 443,
            "id": "sgrule-1775554738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb2d7a8caa2b8f8d",
            "security_group_rule_id": "sgr-09600c59ad3ac5221",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default_vpc_public_subnets",
            "data.aws_vpc.default_vpc",
            "module.alb.aws_lb_target_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}